# mpi-nccl-examples

./: CMakeLists.txt  README.md
scripts/: mpi-multi.sh  mpi-single.sh  multi.sh  nvprof-multi.sh  single.sh
src/: CMakeLists.txt  test_mpi.cpp  test_nccl.cu
